add getpostpages to api
